@@ -49,6 +49,7 @@ libgncmod_gnome_utils_la_SOURCES = \
   gnc-mdi-utils.c \
   gnc-menu-extensions.c \
   gnc-query-list.c \
+  gnc-splash.c \
   gncmod-gnome-utils.c \
   gtkselect.c \
   misc-gnome-utils.c \
@@ -86,6 +87,7 @@ gncinclude_HEADERS = \
   gnc-mdi-utils.h \
   gnc-menu-extensions.h \
   gnc-query-list.h \
+  gnc-splash.h \
   gtkselect.h \
   misc-gnome-utils.h \
   print-session.h \
@@ -94,6 +96,7 @@ gncinclude_HEADERS = \
 noinst_HEADERS = \
   argv-list-converters.h \
   gnc-dir.h \
+  gnc-version.h \
   gw-gnome-utils.h \
   search-param.h
 
@@ -156,7 +159,22 @@ gnc-dir.h: gnc-dir.h.in ${top_builddir}/config.status
 	    -e 's:@-GNC_GLADE_DIR-@:${GNC_GLADE_DIR}:g' \
 	    -e 's:@-GNC_PIXMAP_DIR-@:${GNC_PIXMAP_DIR}:g'
 	mv $@.tmp $@
-BUILT_SOURCES = gnc-dir.h
+
+gnc-version.h: _gnc-version.h
+	-[ ! -f gnc-version.h ] && cp _gnc-version.h gnc-version.h
+	-cmp -s _gnc-version.h gnc-version.h || cp _gnc-version.h gnc-version.h
+	-rm -f _gnc-version.h
+
+_gnc-version.h:
+	@echo "/* Autogenerated. Do not change. */"	 > _gnc-version.h
+	@echo "#ifndef GNC_VERSION_H"			>> _gnc-version.h
+	@echo "#define GNC_VERSION_H"			>> _gnc-version.h
+	@echo ""					>> _gnc-version.h
+	@echo "#define GNUCASH_BUILD_DATE \"`date +%Y-%m-%d`\"" >> _gnc-version.h
+	@echo ""					>> _gnc-version.h
+	@echo "#endif"					>> _gnc-version.h
+
+BUILT_SOURCES = gnc-dir.h gnc-version.h
 
 if GNUCASH_SEPARATE_BUILDDIR
 #For compiling
