@@ -41,7 +41,6 @@ libgncgnome_la_SOURCES = \
   druid-hierarchy.c \
   druid-loan.c \
   druid-stock-split.c \
-  gnc-splash.c \
   gnc-split-reg.c \
   mainwindow-account-tree.c \
   reconcile-list.c \
@@ -79,9 +78,7 @@ noinst_HEADERS = \
   druid-loan.h \
   druid-stock-split.h \
   gnc-network.h \
-  gnc-splash.h \
   gnc-split-reg.h \
-  gnc-version.h \
   gw-gnc.h \
   mainwindow-account-tree.h \
   reconcile-list.h \
@@ -149,20 +146,6 @@ gnucash.keys: gnucash.keys.in ${top_builddir}/config.status
 
 noinst_DATA = .scm-links
 
-gnc-version.h: _gnc-version.h
-	-[ ! -f gnc-version.h ] && cp _gnc-version.h gnc-version.h
-	-cmp -s _gnc-version.h gnc-version.h || cp _gnc-version.h gnc-version.h
-	-rm -f _gnc-version.h
-
-_gnc-version.h:
-	@echo "/* Autogenerated. Do not change. */"	 > _gnc-version.h
-	@echo "#ifndef GNC_VERSION_H"			>> _gnc-version.h
-	@echo "#define GNC_VERSION_H"			>> _gnc-version.h
-	@echo ""					>> _gnc-version.h
-	@echo "#define GNUCASH_BUILD_DATE \"`date +%Y-%m-%d`\"" >> _gnc-version.h
-	@echo ""					>> _gnc-version.h
-	@echo "#endif"					>> _gnc-version.h
-
 if GNUCASH_SEPARATE_BUILDDIR
 #For compiling
 SCM_FILE_LINKS = gw-gnc-spec.scm
@@ -189,7 +172,7 @@ gw-gnc.scm gw-gnc.h gw-gnc.c gw-gnc.html: \
            (set! %load-path (cons \"../report/report-gnome\" %load-path)) \
            (primitive-load \"./gw-gnc-spec.scm\") \
            (gw:generate-wrapset \"gw-gnc\")"
-BUILT_SOURCES = gw-gnc.scm gw-gnc.h gw-gnc.c gnc-version.h
+BUILT_SOURCES = gw-gnc.scm gw-gnc.h gw-gnc.c
 CLEANFILES = gnucash.keys gnucash.desktop
 DISTCLEANFILES = gnucash g-wrapped .scm-links ${SCM_FILE_LINKS} \
                  gw-gnc.html
